2012-09-22  iain buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::maybeCompound): Use IRState::compound.
	(IRState::maybeVoidCompound): Use IRState::voidCompound.
	(IRState::call): Check TREE_SIDE_EFFECTS to determine order of
	evaluation in function calls.  Evaluate callee before arguments if has
	side effects.
	* d-decls.cc(FuncDeclaration::toSymbol): Don't set any pure/nothrow
	attributes if asserts are generated in code.
	* d-incpath(add_fileimp_path): Fix ICE using -J option.
	* d-objfile.cc(Obj::moduleinfo): Clean-up.

2012-09-18  iain buclaw  <ibuclaw@ubuntu.com>

	* d-lang.cc(d_initialize_diagnostics): New function, disable unneeded
	diagnostic options.
	(d_handle_option): Remove OPT_fdebug_c.
	* d-spec.c(lang_specific_driver): Remove OPT_fod_, OPT_fop.
	* lang.opt: Remove -fdebug-c, -fod, and -fop compiler options.

2012-09-17  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.h(CtorEltMaker::cons): Adjust call to VEC_safe_push.
	* d-objfile.cc(ObjectFile::stripVarDecl): Clean-up.

2012-09-16  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::isCallByAlias): New function.
	(IRState::call): Use IRState::isCallByAlias.
	* d-objfile.cc(ObjectFile::setupSymbolStorage): Mark
	force_static_public symbols as public.

	* d-spec.c(lang_specific_driver): Update for GCC-4.8.
	* lang.opt: Fix spelling of option -static-libphobos

	* d-codegen.cc(IRState::maybeExpandSpecialCall): Do not handle inp*
	and outp* port intrinsic functions.
	(IRState::maybeSetUpBuiltin): Likewise.
	(IRState::expandPortIntrinsic): Remove.

2012-09-10  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(AggLayout::doFields): Propagate volatile out of type.
	(AggLayout::addField): Likewise.
	* d-decls.cc(VarDeclaration::toSymbol): Likewise.

2012-09-06  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.h(IRState::vconvert): Don't use VIEW_CONVERT_EXPR.
	* d-glue.cc(TypeEnum::toCtype): Mark TYPE_PACKED if flag_short_enums.